
icondir = $(datadir)/icons/Rodent/48x48/stock

icon_DATA = \
media-backward.png      stock_dialog_authentication.png   stock_insert-image.png    stock_reset.png\
media-eject.png         stock_dialog_error.png            stock_insert-object.png   stock_revert-to-saved.png\
media-forward.png       stock_dialog_info.png             stock_insert-table.png    stock_run.png\
media-next.png          stock_dialog_question.png         stock_internet.png        stock_save-as.png\
media-pause.png         stock_dialog_warning.png          stock_italic.png          stock_save.png\
media-play.png          stock_disconnect.png              stock_jump-to.png         stock_screenshot.png\
media-prev.png          stock_dnd-multiple.png            stock_justify-center.png  stock_search.png\
media-record.png        stock_dnd.png                     stock_justify-fill.png    stock_select-color.png\
media-stop.png          stock_download.png                stock_justify-left.png    stock_select-font.png\
rox-select.png          stock_edit.png                    stock_justify-right.png   stock_sort-ascending.png\
rox-show-details.png    stock_epiphany-bookmark-page.png  stock_line-in.png         stock_sort-descending.png\
rox-show-hidden.png     stock_execute.png                 stock_logout.png          stock_spell-check.png\
stock_about.png         stock_export.png                  stock_mailto.png          stock_stop.png\
stock_accessories.png   stock_find-and-replace.png        stock_mic.png             stock_strikethrough.png\
stock_add.png           stock_find.png                    stock_missing-image.png   stock_undelete.png\
stock_amusements.png    stock_floppy.png                  stock_multimedia.png      stock_underline.png\
stock_apply.png         stock_fullscreen.png              stock_network.png         stock_undo.png\
stock_attach.png        stock_go-back.png                 stock_new.png             stock_unindent.png\
stock_balance.png       stock_go-down.png                 stock_new-tab.png         stock_unknown.png\
stock_bold.png          stock_go-forward.png              stock_no.png              stock_volume.png\
stock_book-open.png     stock_goto-bottom.png             stock_ok.png              stock_yes.png\
stock_book.png          stock_goto-first.png              stock_open.png            stock_zoom-100.png\
stock_cancel.png        stock_goto-last.png               stock_paste.png           stock_zoom-fit.png\
stock_cdrom.png         stock_goto-top.png                stock.png                 stock_zoom-in.png\
stock_clear.png         stock_go-up.png                   stock_preferences.png     stock_zoom-out.png\
stock_close.png         stock_harddisk.png                stock_print.png           volume-max.png\
stock_color_picker.png  stock_help.png                    stock_print-preview.png   volume-medium.png\
stock_connect.png       stock_history.png                 stock_properties.png      volume-min.png\
stock_convert.png       stock_home.png                    stock_quit.png            volume-mute.png\
stock_copy.png          stock_import.png                  stock_redo.png            volume-zero.png\
stock_cut.png           stock_indent.png                  stock_refresh.png\
stock_delete.png        stock_index.png                   stock_remove.png

EXTRA_DIST =  $(icon_DATA)

