
icondir = $(datadir)/icons/Rodent/scalable/apps

icon_DATA = \
applets-screenshooter.svg    gnome-pdf.svg         xfce-games.svg\
bluefish-icon.svg            gnome-searchtool.svg  xfce-gnome-mailcheck.svg\
digikamcameraclient.svg      gnome-settings.svg    xfce-graphics.svg\
digikam.svg                  gnome-shutdown.svg    xfce-gtk-paste.svg\
evolution.svg                gnome-starthere.svg   xfce-internet.svg\
file-manager.svg             gnome-system.svg      xfce-mail.svg\
file-roller.svg              gnome-terminal.svg    xfce-man.svg\
gftp.svg                     gnome-util.svg        xfce-multimedia.svg\
gimp.svg                     gqview.svg            xfce-newmail.svg\
gnome-applications.svg       im-aim.svg            xfce-nomail.svg\
gnome-audio.svg              keyboard.svg          xfce-oldmail.svg\
gnome-calculator.svg         ooo_calc.svg          xfce-printer.svg\
gnome-cdplayer-icon.svg      ooo_chart.svg         xfce-schedule.svg\
gnome-desktop-config.svg     ooo_draw.svg          xfce-sound.svg\
gnome-devel.svg              ooo_impress.svg       xfce-system-exit.svg\
gnome-globe.svg              ooo_math.svg          xfce-system-info.svg\
gnome-graphics.svg           ooo_setup.svg         xfce-system-lock.svg\
gnome-help.svg               ooo_writer.svg        xfce-system-settings.svg\
gnome-joystick.svg           palm-pilot.svg        xfce-terminal.svg\
gnome-lockscreen.svg         settings.svg          xfce-trash_empty.svg\
gnome-logout.svg             web-browser.svg       xfce-trash_full.svg\
gnome-media-player-icon.svg  xcdroast.svg          xfce-unknown.svg\
gnome-multimedia.svg         xfce-edit.svg         xfce-utils.svg\
gnome-other.svg              xfce-filemanager.svg  xsane.svg

EXTRA_DIST =  $(icon_DATA)

