
icondir = $(datadir)/icons/Rodent/scalable/apps

icon_DATA = \
applets-screenshooter.svg    gnome-pdf.svg         xfce-gnome-mailcheck.svg\
bluefish-icon.svg            gnome-searchtool.svg  xfce-graphics.svg\
digikamcameraclient.svg      gnome-settings.svg    xfce-gtk-paste.svg\
digikam.svg                  gnome-shutdown.svg    xfce-internet.svg\
evolution.svg                gnome-starthere.svg   xfce-mail.svg\
file-manager.svg             gnome-system.svg      xfce-man.svg\
file-roller.svg              gnome-terminal.svg    xfce-multimedia.svg\
gftp.svg                     gnome-util.svg        xfce-newmail.svg\
gimp.svg                     gqview.svg            xfce-nomail.svg\
gnome-applications.svg       im-aim.svg            xfce-oldmail.svg\
gnome-audio.svg              keyboard.svg          xfce-printer.svg\
gnome-calculator.svg         ooo_calc.svg          xfce-schedule.svg\
gnome-cdplayer-icon.svg      ooo_chart.svg         xfce-sound.svg\
gnome-desktop-config.svg     ooo_draw.svg          xfce-system-exit.svg\
gnome-devel.svg              ooo_impress.svg       xfce-system-info.svg\
gnome-globe.svg              ooo_math.svg          xfce-system-lock.svg\
gnome-graphics.svg           ooo_setup.svg         xfce-system-settings.svg\
gnome-help.svg               ooo_writer.svg        xfce-terminal.svg\
gnome-info.svg               palm-pilot.svg        xfce-trash_empty.svg\
gnome-joystick.svg           settings.svg          xfce-trash_full.svg\
gnome-lockscreen.svg         web-browser.svg       xfce-unknown.svg\
gnome-logout.svg             xcdroast.svg          xfce-utils.svg\
gnome-media-player-icon.svg  xfce-edit.svg         xsane.svg\
gnome-multimedia.svg         xfce-filemanager.svg\
gnome-other.svg              xfce-games.svg

EXTRA_DIST =  $(icon_DATA)

