
icondir = $(datadir)/icons/Rodent/scalable/apps

icon_DATA = \
applets-screenshooter.svg    gnome-searchtool.svg  xfce-games.svg\
bluefish-icon.svg            gnome-settings.svg    xfce-gnome-mailcheck.svg\
digikamcameraclient.svg      gnome-shutdown.svg    xfce-graphics.svg\
digikam.svg                  gnome-starthere.svg   xfce-gtk-paste.svg\
evolution.svg                gnome-system.svg      xfce-internet.svg\
file-manager.svg             gnome-terminal.svg    xfce-mail.svg\
file-roller.svg              gnome-util.svg        xfce-man.svg\
gftp.svg                     gqview.svg            xfce-multimedia.svg\
gimp.svg                     im-aim.svg            xfce-newmail.svg\
gnome-applications.svg       keyboard.svg          xfce-nomail.svg\
gnome-audio.svg              ooo_calc.svg          xfce-oldmail.svg\
gnome-calculator.svg         ooo_chart.svg         xfce-printer.svg\
gnome-cdplayer-icon.svg      ooo_draw.svg          xfce-schedule.svg\
gnome-desktop-config.svg     ooo_impress.svg       xfce-sound.svg\
gnome-devel.svg              ooo_math.svg          xfce-system-exit.svg\
gnome-globe.svg              ooo_setup.svg         xfce-system-info.svg\
gnome-graphics.svg           ooo_writer.svg        xfce-system-lock.svg\
gnome-help.svg               palm-pilot.svg        xfce-system-settings.svg\
gnome-info.svg               settings.svg          xfce-terminal.svg\
gnome-joystick.svg           web-browser.svg       xfce-trash_empty.svg\
gnome-lockscreen.svg         xcdroast.svg          xfce-trash_full.svg\
gnome-logout.svg             xfce4-mixer.svg       xfce-unknown.svg\
gnome-media-player-icon.svg  xfce4-panel.svg       xfce-utils.svg\
gnome-multimedia.svg         xfce4-splash.svg      xsane.svg\
gnome-other.svg              xfce-edit.svg\
gnome-pdf.svg                xfce-filemanager.svg


EXTRA_DIST =  $(icon_DATA)

