
icondir = $(datadir)/icons/Rodent/scalable/devices

icon_DATA = \
gnome-dev-cdrom-audio.svg  gnome-dev-keyboard.svg       gnome-dev-scanner.svg\
gnome-dev-cdrom.svg        gnome-dev-mouse-ball.svg     gnome-dev-symlink.svg\
gnome-dev-dvd.svg          gnome-dev-mouse-optical.svg  gnome-dev-zipdisk.svg\
gnome-dev-floppy.svg       gnome-dev-network.svg        network_fs.svg\
gnome-dev-harddisk.svg     gnome-dev-printer.svg\
gnome-dev-jazdisk.svg      gnome-dev-removable.svg	printer-class.svg

EXTRA_DIST =  $(icon_DATA)

