
icondir = $(datadir)/icons/Rodent/scalable/mimetypes

icon_DATA = \
gnome-library.svg                                    gnome-mime-audio-x-midi.svg\
gnome-mime-application-msword.svg                    gnome-mime-audio-x-mod.svg\
gnome-mime-application-octet-stream.svg              gnome-mime-audio-x-mp3.svg\
gnome-mime-application-ogg.svg                       gnome-mime-audio-x-mpegurl.svg\
gnome-mime-application-pdf.svg                       gnome-mime-audio-x-pn-realaudio.svg\
gnome-mime-application-pgp-encrypted.svg             gnome-mime-audio-x-s3m.svg\
gnome-mime-application-pgp-keys.svg                  gnome-mime-audio-x-stm.svg\
gnome-mime-application-pgp.svg                       gnome-mime-audio-x-ulaw.svg\
gnome-mime-application-postscript.svg                gnome-mime-audio-x-voc.svg\
gnome-mime-application-qif.svg                       gnome-mime-audio-x-wav.svg\
gnome-mime-application-rhythmbox-effect.svg          gnome-mime-audio-x-xi.svg\
gnome-mime-application-rhythmbox-playlist.svg        gnome-mime-audio-x-xm.svg\
gnome-mime-application-rtf.svg                       gnome-mime-image-bmp.svg\
gnome-mime-application-smil.svg                      gnome-mime-image-gif.svg\
gnome-mime-application.svg                           gnome-mime-image-ief.svg\
gnome-mime-application-vnd.ms-excel.svg              gnome-mime-image-jpeg.svg\
gnome-mime-application-vnd.ms-powerpoint.svg         gnome-mime-image-png.svg\
gnome-mime-application-vnd.rn-realmedia.svg          gnome-mime-image.svg\
gnome-mime-application-vnd.stardivision.calc.svg     gnome-mime-image-svg.svg\
gnome-mime-application-vnd.stardivision.chart.svg    gnome-mime-image-tiff.svg\
gnome-mime-application-vnd.stardivision.impress.svg  gnome-mime-image-x-3ds.svg\
gnome-mime-application-vnd.stardivision.writer.svg   gnome-mime-image-x-applix-graphic.svg\
gnome-mime-application-vnd.sun.xml.calc.svg          gnome-mime-image-x-cmu-raster.svg\
gnome-mime-application-vnd.sun.xml.chart.svg         gnome-mime-image-x-portable-anymap.svg\
gnome-mime-application-vnd.sun.xml.draw.svg          gnome-mime-image-x-portable-bitmap.svg\
gnome-mime-application-vnd.sun.xml.impress.svg       gnome-mime-image-x-portable-greymap.svg\
gnome-mime-application-vnd.sun.xml.writer.svg        gnome-mime-image-x-portable-pixmap.svg\
gnome-mime-application-x-abiword.svg                 gnome-mime-image-x-psd.svg\
gnome-mime-application-x-archive.svg                 gnome-mime-image-x-rgb.svg\
gnome-mime-application-x-arj.svg                     gnome-mime-image-x-tga.svg\
gnome-mime-application-x-blender.svg                 gnome-mime-image-x-xbitmap.svg\
gnome-mime-application-x-bzip-compressed-tar.svg     gnome-mime-image-x-xcf.svg\
gnome-mime-application-x-bzip.svg                    gnome-mime-image-x-xfig.svg\
gnome-mime-application-x-cd-image.svg                gnome-mime-image-x-xpixmap.svg\
gnome-mime-application-x-compressed-tar.svg          gnome-mime-image-x-xwindowdum.svg\
gnome-mime-application-x-compress.svg                gnome-mime-text-css.svg\
gnome-mime-application-x-cpio-compressed.svg         gnome-mime-text-html.svg\
gnome-mime-application-x-cpio.svg                    gnome-mime-text-sgml.svg\
gnome-mime-application-x-deb.svg                     gnome-mime-text.svg\
gnome-mime-application-x-desktop.svg                 gnome-mime-text-x-authors.svg\
gnome-mime-application-x-dia-diagram.svg             gnome-mime-text-x-chdr.svg\
gnome-mime-application-x-dvi.svg                     gnome-mime-text-x-c-header.svg\
gnome-mime-application-x-executable.svg              gnome-mime-text-x-copying.svg\
gnome-mime-application-x-font-asm.svg                gnome-mime-text-x-credits.svg\
gnome-mime-application-x-font-bdf.svg                gnome-mime-text-x-csharp.svg\
gnome-mime-application-x-font-linux-psf.svg          gnome-mime-text-x-csh.svg\
gnome-mime-application-x-font-pcf.svg                gnome-mime-text-x-c++src.svg\
gnome-mime-application-x-font-ttf.svg                gnome-mime-text-x-csrc.svg\
gnome-mime-application-x-gettext-translation.svg     gnome-mime-text-x-c.svg\
gnome-mime-application-x-glade.svg                   gnome-mime-text-x-c++.svg\
gnome-mime-application-x-gnucash.svg                 gnome-mime-text-x-gettext-translation.svg\
gnome-mime-application-x-gnumeric.svg                gnome-mime-text-x-haskell.svg\
gnome-mime-application-x-gtktalog.svg                gnome-mime-text-x-install.svg\
gnome-mime-application-x-gzip.svg                    gnome-mime-text-x-java.svg\
gnome-mime-application-x-kde-app-info.svg            gnome-mime-text-x-literate-haskell.svg\
gnome-mime-application-x-killustrator.svg            gnome-mime-text-x-log.svg\
gnome-mime-application-x-kpresenter.svg              gnome-mime-text-x-lyx.svg\
gnome-mime-application-x-kspread.svg                 gnome-mime-text-x-makefile.svg\
gnome-mime-application-x-kword.svg                   gnome-mime-text-xml.svg\
gnome-mime-application-x-lha.svg                     gnome-mime-text-x-patch.svg\
gnome-mime-application-x-object.svg                  gnome-mime-text-x-readme.svg\
gnome-mime-application-x-perl.svg                    gnome-mime-text-x-scheme.svg\
gnome-mime-application-x-php.svg                     gnome-mime-text-x-sh.svg\
gnome-mime-application-x-python-bytecode.svg         gnome-mime-text-x-tex.svg\
gnome-mime-application-x-python.svg                  gnome-mime-text-x-troff-man.svg\
gnome-mime-application-x-qw.svg                      gnome-mime-text-x-vcalendar.svg\
gnome-mime-application-x-rar.svg                     gnome-mime-text-x-vcard.svg\
gnome-mime-application-x-reject.svg                  gnome-mime-text-x-xslt.svg\
gnome-mime-application-x-rpm.svg                     gnome-mime-text-x-zsh.svg\
gnome-mime-application-x-sharedlib.svg               gnome-mime-video-mpeg.svg\
gnome-mime-application-x-share-library-la.svg        gnome-mime-video-quicktime.svg\
gnome-mime-application-x-shellscript.svg             gnome-mime-video.svg\
gnome-mime-application-x-shockwave-flash.svg         gnome-mime-video-x-ms-asf.svg\
gnome-mime-application-x-smil.svg                    gnome-mime-video-x-msvideo.svg\
gnome-mime-application-x-tar.svg                     gnome-mime-video-x-ms-wmv.svg\
gnome-mime-application-x-tex.svg                     gnome-mime-x-directory-nfs-server.svg\
gnome-mime-application-x-trash.svg                   gnome-mime-x-directory-smb-server.svg\
gnome-mime-application-zip.svg                       gnome-mime-x-directory-smb-share.svg\
gnome-mime-audio-ac3.svg                             gnome-mime-x-directory-smb-workgroup.svg\
gnome-mime-audio-basic.svg                           gnome-mime-x-font-afm.svg\
gnome-mime-audio-midi.svg                            gnome-package.svg\
gnome-mime-audio.svg                                 stock_run.svg\
gnome-mime-audio-x-aiff.svg                          x-gdesklets-display.svg\
gnome-mime-audio-x-it.svg

install-data-local:
	$(mkinstalldirs) $(DESTDIR)$(icondir)
	( cd $(DESTDIR)$(icondir) ; \
	  icons="$(icon_DATA)" ; \
	  for file in $$icons; do \
	    if echo $$file | grep '^gnome-mime-[^-]*-' > /dev/null; then \
	      ln -sf $$file `echo $$file | sed -e 's/^gnome-mime-\([^-]*\)-/mime-\1:/'` ; \
	    elif echo $$file | grep '^gnome-mime-' > /dev/null; then \
	      ln -sf $$file `echo $$file | sed -e 's/^gnome-//'` ; \
	    fi \
	  done \
	)

EXTRA_DIST =  $(icon_DATA)

