
icondir = $(datadir)/icons/Rodent/scalable/misc

icon_DATA = \
arrow.svg         f-memory.svg         notes.svg          ui.svg\
backdrop.svg      fs-win.svg           panel.svg          usb_key.svg\
calc.svg          gnome-starthere.svg  root_terminal.svg  webcam.svg\
calendar.svg      iconbox.svg          run.svg            wksp.svg\
chooser_icon.svg  keyboard.svg         settings.svg       wm.svg\
debian.svg        menueditor.svg       sm.svg             xfce4-appfinder.svg\
display.svg       money.svg            sound.svg          xfsettings.svg\
file-manager.svg  mouse.svg            tabwin.svg\
firewall.svg      news.svg             taskbar.svg

EXTRA_DIST =  $(icon_DATA)

