
icondir = $(datadir)/icons/Rodent/scalable/misc

icon_DATA = \
arrow.svg         firewall.svg    news.svg           tabwin.svg\
backdrop.svg      f-memory.svg    notes.svg          taskbar.svg\
calc.svg          fs-win.svg      panel.svg          ui.svg\
calendar.svg      iconbox.svg     root_terminal.svg  usb_key.svg\
chooser_icon.svg  keyboard.svg    run.svg            webcam.svg\
debian.svg        menueditor.svg  settings.svg       wksp.svg\
display.svg       money.svg       sm.svg             wm.svg\
file-manager.svg  mouse.svg       sound.svg          xfce4-appfinder.svg

EXTRA_DIST =  $(icon_DATA)

