
icondir = $(datadir)/icons/Rodent/scalable/misc

icon_DATA = \
calc.svg      news.svg           sound.svg        webcam.svg \
debian.svg    notes.svg          tabwin.svg       wksp.svg \
firewall.svg  root_terminal.svg  taskbar.svg      wm.svg \
f-memory.svg  run.svg            taskmanager.svg  xfce4-appfinder.svg \
fs-win.svg    settings.svg       ui.svg \
money.svg     sm.svg             usb_key.svg 

EXTRA_DIST =  $(icon_DATA)

