
icondir = $(datadir)/icons/Rodent/scalable/stock

icon_DATA = \
b-recent.svg           stock_cdrom.svg                   stock_harddisk.svg        stock_quit.svg\
c-gid.svg              stock_clear.svg                   stock_help.svg            stock_redo.svg\
c-name.svg             stock_close.svg                   stock_history.svg         stock_refresh.svg\
c-size.svg             stock_color_picker.svg            stock_home.svg            stock_remove.svg\
c-time.svg             stock_connect.svg                 stock_import.svg          stock_reset.svg\
c-uid.svg              stock_convert.svg                 stock_indent.svg          stock_revert-to-saved.svg\
diff.svg               stock_copy.svg                    stock_index.svg           stock_run.svg\
d-symlink-broken.svg   stock_cut.svg                     stock_insert-image.svg    stock_save-as.svg\
media-backward.svg     stock_delete.svg                  stock_insert-object.svg   stock_save.svg\
media-eject.svg        stock_dialog_authentication.svg   stock_insert-table.svg    stock_screenshot.svg\
media-forward.svg      stock_dialog_error.svg            stock_internet.svg        stock_search.svg\
media-next.svg         stock_dialog_info.svg             stock_italic.svg          stock_select-color.svg\
media-pause.svg        stock_dialog_question.svg         stock_jump-to.svg         stock_select-font.svg\
media-play.svg         stock_dialog_warning.svg          stock_justify-center.svg  stock_sort-ascending.svg\
media-prev.svg         stock_disconnect.svg              stock_justify-fill.svg    stock_sort-descending.svg\
media-record.svg       stock_dnd_multiple.svg            stock_justify-left.svg    stock_spell-check.svg\
media-stop.svg         stock_dnd.svg                     stock_justify-right.svg   stock_stop.svg\
m-font.svg             stock_download.svg                stock_line-in.svg         stock_strikethrough.svg\
m-lock.svg             stock_edit.svg                    stock_logout.svg          stock_undelete.svg\
m-spreadsheet.svg      stock_epiphany-bookmark-page.svg  stock_mailto.svg          stock_underline.svg\
p-new-directory.svg    stock_execute.svg                 stock_mic.svg             stock_undo.svg\
rox-show-details.svg   stock_export.svg                  stock_missing-image.svg   stock_unindent.svg\
rox-show-hidden.svg    stock_find-and-replace.svg        stock_multimedia.svg      stock_unknown.svg\
stock_about.svg        stock_find.svg                    stock_network.svg         stock_volume.svg\
stock_accessories.svg  stock_floppy.svg                  stock_new.svg             stock_yes.svg\
stock_add.svg          stock_fullscreen.svg              stock_new-tab.svg         stock_zoom-100.svg\
stock_amusements.svg   stock_go-back.svg                 stock_no.svg              stock_zoom-fit.svg\
stock_apply.svg        stock_go-down.svg                 stock_ok.svg              stock_zoom-in.svg\
stock_attach.svg       stock_go-forward.svg              stock_open.svg            stock_zoom-out.svg\
stock_balance.svg      stock_goto-bottom.svg             stock_paste.svg           volume-max.svg\
stock_bold.svg         stock_goto-first.svg              stock_preferences.svg     volume-medium.svg\
stock_book-open.svg    stock_goto-last.svg               stock_print-preview.svg   volume-min.svg\
stock_book.svg         stock_goto-top.svg                stock_print.svg           volume-mute.svg\
stock_cancel.svg       stock_go-up.svg                   stock_properties.svg      volume-zero.svg

EXTRA_DIST =  $(icon_DATA)

