
icondir = $(datadir)/icons/Rodent/scalable/emblems

icon_DATA = \
emblem-camera.svg         emblem-generic.svg     emblem-pictures.svg\
emblem-cool.svg           emblem-important.svg   emblem-relax.svg\
emblem-danger.svg         emblem-multimedia.svg  emblem-sound.svg\
emblem-desktop.svg        emblem-noread.svg      emblem-symbolic-link.svg\
emblem-distinguished.svg  emblem-nowrite.svg     emblem-urgent.svg\
emblem-documents.svg      emblem-ohno.svg        emblem-web.svg\
emblem-fun.svg            emblem-package.svg     

EXTRA_DIST =  $(icon_DATA)

